[gd_scene load_steps=4 format=3 uid="uid://cf7i0fsng405y"]

[ext_resource type="Script" path="res://Components/Plataforma (PL)/Scripts/PL_GUI_inicio.gd" id="1_3bta2"]
[ext_resource type="Texture2D" uid="uid://docck63ae1m1k" path="res://Sprites/Logo_Run_Chicken_Run.png" id="2_03c2v"]
[ext_resource type="FontFile" uid="uid://cj14xujbxu455" path="res://Resources/Fonts/NewAmsterdam-Regular.ttf" id="3_xg2gs"]

[node name="PlInicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bta2")

[node name="LogoRunChickenRun" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(250, 250)
texture = ExtResource("2_03c2v")

[node name="Iniciar" type="Button" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 281.0
offset_top = 298.0
offset_right = 480.0
offset_bottom = 339.0
theme_override_fonts/font = ExtResource("3_xg2gs")
theme_override_font_sizes/font_size = 26
text = "Iniciar"

[node name="Niveles" type="Button" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 280.0
offset_top = 349.0
offset_right = 481.0
offset_bottom = 390.0
theme_override_fonts/font = ExtResource("3_xg2gs")
theme_override_font_sizes/font_size = 26
text = "Niveles"

[node name="Extras" type="Button" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 281.0
offset_top = 398.0
offset_right = 480.0
offset_bottom = 439.0
theme_override_fonts/font = ExtResource("3_xg2gs")
theme_override_font_sizes/font_size = 26
text = "Extras"

[connection signal="pressed" from="Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="Niveles" to="." method="_on_niveles_pressed"]
[connection signal="pressed" from="Extras" to="." method="_on_extras_pressed"]
